--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <li><a href="html/car.html">購物車</a></li>
                             <li><a href="html/login.html">登入/註冊</a>
                                 <ul>
-                                    <li><a href="html/user.htmlㄋ">使用者介面</a></li>
+                                    <li><a href="html/user.html">使用者介面</a></li>
                                 </ul>
                             </li>
                         </ul>
